[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scenes/items/converyor_belt_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/scenes/items/ConveyorBelt.gd" type="Script" id=2]

[node name="ConveyorBelt" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 30
script = ExtResource( 2 )

[node name="MiddleTemplate" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 1 )
animation = "Middle"
centered = false

[node name="SpritesContainer" type="Node2D" parent="."]

[node name="Left" type="AnimatedSprite" parent="SpritesContainer"]
frames = ExtResource( 1 )
animation = "Start"
centered = false

[node name="Right" type="AnimatedSprite" parent="SpritesContainer"]
position = Vector2( 8, 0 )
frames = ExtResource( 1 )
animation = "End"
centered = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 30

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
